--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.3",
     "@hookform/resolvers": "^3.2.0",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.4.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -37,10 +37,10 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "lucide-react": "^0.244.0",
-    "next": "13.4.5",
+    "next": "^13.5.6",
     "next-cloudinary": "^4.18.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
@@ -56,6 +56,6 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "prisma": "^5.1.1"
+    "prisma": "^5.4.2"
   }
 }
